--- a/styles.css
+++ b/styles.css
@@ -23,6 +23,18 @@ img {
     border-radius: 30px;
 }
 
+h3 {
+    text-align: right;
+}
+
+p {
+    color:gray;
+}
+
+.pic-cap {
+    border: 2.5px solid #3882f6;
+}
+
 .header {
     background-color: #1f2937;
     display: flex;
@@ -36,6 +48,48 @@ img {
     display: flex;
     padding: 5% 15%;
     gap: 50px;
+    margin-bottom: 3em;
+}
+
+.section-two {
+    display: flex;
+    background-color: white;
+    align-items: center;
+    justify-content: center;
+}
+
+.container-pics {
+    display: flex;
+    text-align: center;
+    max-width: 200px;
+    align-items: center;
+    gap: 20px;
+    justify-content: center;
+    margin-top: 1em;
+    margin-bottom: 5em;
+}
+
+.section-three {
+    display: flex;
+    background-color: #e5e7eb;
+    padding: 5em 27%;
+    flex-flow: column wrap;
+}
+
+.section-four {
+    justify-content: center;
+    align-items: center;
+    background-color: #3882f6;
+    gap: 20em;
+    color: white;
+    padding: 50px 0;
+    margin: 5% 15%;
+    border-radius: 10px;
+}
+
+.call-to-action {
+    margin: 0;
+    padding: 0 15%;
 }
 
 .footer {
@@ -52,6 +106,25 @@ img {
 #main-text {
     font-size: 48px;
     color: #f9faf8;
+}
+
+#information-header {
+    font-size: 36px;
+    font-weight: bolder;
+    color: #1f2937;
+    text-align: center;
+}
+
+#quote {
+    font-size: 36px;
+    font-weight: 200;
+    font-style: italic;
+    color: #1f2937;
+}
+
+#call-to-action-text {
+    color:  #e5e7eb;
+    font-size: 24px;
 }
 
 .secondary-text {
@@ -71,4 +144,8 @@ a {
     text-decoration: none;
     font-size: 18px;
     color: #e5e7eb;
+}
+
+.second {
+    border: 2px solid white;
 }
